Adding styles to the basic Clock component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,6 @@
 @import "base/variables";
-@import "components/nav"
+@import "components/nav";
+@import "components/clock";
 
 // here we load in the files that do the trick
 // this file will contain series of imports...
