Wired up controls component along with testing of the component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import "base/variables";
 @import "components/nav";
 @import "components/clock";
+@import "components/controls";
 
 // here we load in the files that do the trick
 // this file will contain series of imports...
