Finalized the test for Countdown

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,8 @@
 @import "components/nav";
 @import "components/clock";
 @import "components/controls";
+@import "components/page-title";
+
 
 // here we load in the files that do the trick
 // this file will contain series of imports...
