--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,8 @@
 @import "base/variables";
+
+//Foundation
+
+//Componenets
 @import "components/nav";
 @import "components/clock";
 @import "components/controls";
